--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                                 <span class="service-img"
                                     ><img
                                         class="img-fluid"
-                                        src="images/services/service_center.png"
+                                        src="images/services/service_center.jpg"
                                         alt=""
                                 /></span>
                             </div>
@@ -862,7 +862,7 @@
                                             <div class="ts-facts-content">
                                                 <h4 class="ts-facts-num">
                                                     <span class="counterUp"
-                                                        >858588</span
+                                                        >8588</span
                                                     >
                                                 </h4>
                                                 <p class="facts-desc">
